methods.returning.MethodsReturning.scala.error
Compilation error:
MethodsReturning:10: error: ';' expected but 'return' found.
  }return vuBiscuit
   ^